[gd_scene load_steps=16 format=4 uid="uid://b7w5a8s8ro7fs"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_yp2kv"]
[ext_resource type="PackedScene" uid="uid://fcfn0lf00gjo" path="res://scenes/ui.tscn" id="2_3xksr"]
[ext_resource type="Texture2D" uid="uid://dqdyxosmfj3ly" path="res://assets/global.png" id="3_yymqq"]
[ext_resource type="Script" path="res://scripts/cursor.gd" id="4_8wacd"]
[ext_resource type="FontFile" uid="uid://c64dshufp1gwx" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="5_lsft3"]
[ext_resource type="Texture2D" uid="uid://doi4wnb1uhq1b" path="res://assets/money.png" id="5_x7qd2"]
[ext_resource type="Texture2D" uid="uid://bdjaxm1egbdy6" path="res://assets/Water+_SciGho_16x16.png" id="7_mbmhn"]
[ext_resource type="AudioStream" uid="uid://by4kd8pnraec4" path="res://assets/audio/gone_fishin_by_memoraphile_CC0.mp3" id="8_rnd8x"]
[ext_resource type="AudioStream" uid="uid://dqwxpd80rjqgb" path="res://assets/audio/the_reel_winner_by_memoraphile_CC0.mp3" id="9_cp6d7"]
[ext_resource type="AudioStream" uid="uid://b3jjjykgt5418" path="res://assets/audio/reel.wav" id="10_kvl0w"]
[ext_resource type="AudioStream" uid="uid://dunajy5kxiglp" path="res://assets/audio/splash.wav" id="11_ju2xe"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7fdve"]
texture = ExtResource("7_mbmhn")
2:2/animation_frame_0/duration = 1.0
2:2/animation_frame_1/duration = 1.0
2:2/animation_frame_2/duration = 1.0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_rdyop"]
sources/1 = SubResource("TileSetAtlasSource_7fdve")

[sub_resource type="Curve" id="Curve_6yo0j"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_lhfge"]
offsets = PackedFloat32Array(0, 0.681373, 1)
colors = PackedColorArray(0.350703, 0.590879, 0, 1, 0.90542, 0.949701, 0.848701, 1, 1, 1, 1, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_yp2kv")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AADz//j/AQACAAIAAADz//n/AQACAAIAAADz//r/AQACAAIAAADz//v/AQACAAIAAADz//z/AQACAAIAAADz//3/AQACAAIAAADz//7/AQACAAIAAADz////AQACAAIAAADz/wAAAQACAAIAAADz/wEAAQACAAIAAADz/wIAAQACAAIAAADz/wMAAQACAAIAAADz/wQAAQACAAIAAADz/wUAAQACAAIAAADz/wYAAQACAAIAAADz/wcAAQACAAIAAAD0//j/AQACAAIAAAD0//n/AQACAAIAAAD0//r/AQACAAIAAAD0//v/AQACAAIAAAD0//z/AQACAAIAAAD0//3/AQACAAIAAAD0//7/AQACAAIAAAD0////AQACAAIAAAD0/wAAAQACAAIAAAD0/wEAAQACAAIAAAD0/wIAAQACAAIAAAD0/wMAAQACAAIAAAD0/wQAAQACAAIAAAD0/wUAAQACAAIAAAD0/wYAAQACAAIAAAD0/wcAAQACAAIAAAD1//j/AQACAAIAAAD1//n/AQACAAIAAAD1//r/AQACAAIAAAD1//v/AQACAAIAAAD1//z/AQACAAIAAAD1//3/AQACAAIAAAD1//7/AQACAAIAAAD1////AQACAAIAAAD1/wAAAQACAAIAAAD1/wEAAQACAAIAAAD1/wIAAQACAAIAAAD1/wMAAQACAAIAAAD1/wQAAQACAAIAAAD1/wUAAQACAAIAAAD1/wYAAQACAAIAAAD1/wcAAQACAAIAAAD2//j/AQACAAIAAAD2//n/AQACAAIAAAD2//r/AQACAAIAAAD2//v/AQACAAIAAAD2//z/AQACAAIAAAD2//3/AQACAAIAAAD2//7/AQACAAIAAAD2////AQACAAIAAAD2/wAAAQACAAIAAAD2/wEAAQACAAIAAAD2/wIAAQACAAIAAAD2/wMAAQACAAIAAAD2/wQAAQACAAIAAAD2/wUAAQACAAIAAAD2/wYAAQACAAIAAAD2/wcAAQACAAIAAAD3//j/AQACAAIAAAD3//n/AQACAAIAAAD3//r/AQACAAIAAAD3//v/AQACAAIAAAD3//z/AQACAAIAAAD3//3/AQACAAIAAAD3//7/AQACAAIAAAD3////AQACAAIAAAD3/wAAAQACAAIAAAD3/wEAAQACAAIAAAD3/wIAAQACAAIAAAD3/wMAAQACAAIAAAD3/wQAAQACAAIAAAD3/wUAAQACAAIAAAD3/wYAAQACAAIAAAD3/wcAAQACAAIAAAD4//j/AQACAAIAAAD4//n/AQACAAIAAAD4//r/AQACAAIAAAD4//v/AQACAAIAAAD4//z/AQACAAIAAAD4//3/AQACAAIAAAD4//7/AQACAAIAAAD4////AQACAAIAAAD4/wAAAQACAAIAAAD4/wEAAQACAAIAAAD4/wIAAQACAAIAAAD4/wMAAQACAAIAAAD4/wQAAQACAAIAAAD4/wUAAQACAAIAAAD4/wYAAQACAAIAAAD4/wcAAQACAAIAAAD5//j/AQACAAIAAAD5//n/AQACAAIAAAD5//r/AQACAAIAAAD5//v/AQACAAIAAAD5//z/AQACAAIAAAD5//3/AQACAAIAAAD5//7/AQACAAIAAAD5////AQACAAIAAAD5/wAAAQACAAIAAAD5/wEAAQACAAIAAAD5/wIAAQACAAIAAAD5/wMAAQACAAIAAAD5/wQAAQACAAIAAAD5/wUAAQACAAIAAAD5/wYAAQACAAIAAAD5/wcAAQACAAIAAAD6//j/AQACAAIAAAD6//n/AQACAAIAAAD6//r/AQACAAIAAAD6//v/AQACAAIAAAD6//z/AQACAAIAAAD6//3/AQACAAIAAAD6//7/AQACAAIAAAD6////AQACAAIAAAD6/wAAAQACAAIAAAD6/wEAAQACAAIAAAD6/wIAAQACAAIAAAD6/wMAAQACAAIAAAD6/wQAAQACAAIAAAD6/wUAAQACAAIAAAD6/wYAAQACAAIAAAD6/wcAAQACAAIAAAD7//j/AQACAAIAAAD7//n/AQACAAIAAAD7//r/AQACAAIAAAD7//v/AQACAAIAAAD7//z/AQACAAIAAAD7//3/AQACAAIAAAD7//7/AQACAAIAAAD7////AQACAAIAAAD7/wAAAQACAAIAAAD7/wEAAQACAAIAAAD7/wIAAQACAAIAAAD7/wMAAQACAAIAAAD7/wQAAQACAAIAAAD7/wUAAQACAAIAAAD7/wYAAQACAAIAAAD7/wcAAQACAAIAAAD8//j/AQACAAIAAAD8//n/AQACAAIAAAD8//r/AQACAAIAAAD8//v/AQACAAIAAAD8//z/AQACAAIAAAD8//3/AQACAAIAAAD8//7/AQACAAIAAAD8////AQACAAIAAAD8/wAAAQACAAIAAAD8/wEAAQACAAIAAAD8/wIAAQACAAIAAAD8/wMAAQACAAIAAAD8/wQAAQACAAIAAAD8/wUAAQACAAIAAAD8/wYAAQACAAIAAAD8/wcAAQACAAIAAAD9//j/AQACAAIAAAD9//n/AQACAAIAAAD9//r/AQACAAIAAAD9//v/AQACAAIAAAD9//z/AQACAAIAAAD9//3/AQACAAIAAAD9//7/AQACAAIAAAD9////AQACAAIAAAD9/wAAAQACAAIAAAD9/wEAAQACAAIAAAD9/wIAAQACAAIAAAD9/wMAAQACAAIAAAD9/wQAAQACAAIAAAD9/wUAAQACAAIAAAD9/wYAAQACAAIAAAD9/wcAAQACAAIAAAD+//j/AQACAAIAAAD+//n/AQACAAIAAAD+//r/AQACAAIAAAD+//v/AQACAAIAAAD+//z/AQACAAIAAAD+//3/AQACAAIAAAD+//7/AQACAAIAAAD+////AQACAAIAAAD+/wAAAQACAAIAAAD+/wEAAQACAAIAAAD+/wIAAQACAAIAAAD+/wMAAQACAAIAAAD+/wQAAQACAAIAAAD+/wUAAQACAAIAAAD+/wYAAQACAAIAAAD+/wcAAQACAAIAAAD///j/AQACAAIAAAD///n/AQACAAIAAAD///r/AQACAAIAAAD///v/AQACAAIAAAD///z/AQACAAIAAAD///3/AQACAAIAAAD///7/AQACAAIAAAD/////AQACAAIAAAD//wAAAQACAAIAAAD//wEAAQACAAIAAAD//wIAAQACAAIAAAD//wMAAQACAAIAAAD//wQAAQACAAIAAAD//wUAAQACAAIAAAD//wYAAQACAAIAAAD//wcAAQACAAIAAAAAAPj/AQACAAIAAAAAAPn/AQACAAIAAAAAAPr/AQACAAIAAAAAAPv/AQACAAIAAAAAAPz/AQACAAIAAAAAAP3/AQACAAIAAAAAAP7/AQACAAIAAAAAAP//AQACAAIAAAAAAAAAAQACAAIAAAAAAAEAAQACAAIAAAAAAAIAAQACAAIAAAAAAAMAAQACAAIAAAAAAAQAAQACAAIAAAAAAAUAAQACAAIAAAAAAAYAAQACAAIAAAAAAAcAAQACAAIAAAABAPj/AQACAAIAAAABAPn/AQACAAIAAAABAPr/AQACAAIAAAABAPv/AQACAAIAAAABAPz/AQACAAIAAAABAP3/AQACAAIAAAABAP7/AQACAAIAAAABAP//AQACAAIAAAABAAAAAQACAAIAAAABAAEAAQACAAIAAAABAAIAAQACAAIAAAABAAMAAQACAAIAAAABAAQAAQACAAIAAAABAAUAAQACAAIAAAABAAYAAQACAAIAAAABAAcAAQACAAIAAAACAPj/AQACAAIAAAACAPn/AQACAAIAAAACAPr/AQACAAIAAAACAPv/AQACAAIAAAACAPz/AQACAAIAAAACAP3/AQACAAIAAAACAP7/AQACAAIAAAACAP//AQACAAIAAAACAAAAAQACAAIAAAACAAEAAQACAAIAAAACAAIAAQACAAIAAAACAAMAAQACAAIAAAACAAQAAQACAAIAAAACAAUAAQACAAIAAAACAAYAAQACAAIAAAACAAcAAQACAAIAAAADAPj/AQACAAIAAAADAPn/AQACAAIAAAADAPr/AQACAAIAAAADAPv/AQACAAIAAAADAPz/AQACAAIAAAADAP3/AQACAAIAAAADAP7/AQACAAIAAAADAP//AQACAAIAAAADAAAAAQACAAIAAAADAAEAAQACAAIAAAADAAIAAQACAAIAAAADAAMAAQACAAIAAAADAAQAAQACAAIAAAADAAUAAQACAAIAAAADAAYAAQACAAIAAAADAAcAAQACAAIAAAAEAPj/AQACAAIAAAAEAPn/AQACAAIAAAAEAPr/AQACAAIAAAAEAPv/AQACAAIAAAAEAPz/AQACAAIAAAAEAP3/AQACAAIAAAAEAP7/AQACAAIAAAAEAP//AQACAAIAAAAEAAAAAQACAAIAAAAEAAEAAQACAAIAAAAEAAIAAQACAAIAAAAEAAMAAQACAAIAAAAEAAQAAQACAAIAAAAEAAUAAQACAAIAAAAEAAYAAQACAAIAAAAEAAcAAQACAAIAAAAFAPj/AQACAAIAAAAFAPn/AQACAAIAAAAFAPr/AQACAAIAAAAFAPv/AQACAAIAAAAFAPz/AQACAAIAAAAFAP3/AQACAAIAAAAFAP7/AQACAAIAAAAFAP//AQACAAIAAAAFAAAAAQACAAIAAAAFAAEAAQACAAIAAAAFAAIAAQACAAIAAAAFAAMAAQACAAIAAAAFAAQAAQACAAIAAAAFAAUAAQACAAIAAAAFAAYAAQACAAIAAAAFAAcAAQACAAIAAAAGAPj/AQACAAIAAAAGAPn/AQACAAIAAAAGAPr/AQACAAIAAAAGAPv/AQACAAIAAAAGAPz/AQACAAIAAAAGAP3/AQACAAIAAAAGAP7/AQACAAIAAAAGAP//AQACAAIAAAAGAAAAAQACAAIAAAAGAAEAAQACAAIAAAAGAAIAAQACAAIAAAAGAAMAAQACAAIAAAAGAAQAAQACAAIAAAAGAAUAAQACAAIAAAAGAAYAAQACAAIAAAAGAAcAAQACAAIAAAAHAPj/AQACAAIAAAAHAPn/AQACAAIAAAAHAPr/AQACAAIAAAAHAPv/AQACAAIAAAAHAPz/AQACAAIAAAAHAP3/AQACAAIAAAAHAP7/AQACAAIAAAAHAP//AQACAAIAAAAHAAAAAQACAAIAAAAHAAEAAQACAAIAAAAHAAIAAQACAAIAAAAHAAMAAQACAAIAAAAHAAQAAQACAAIAAAAHAAUAAQACAAIAAAAHAAYAAQACAAIAAAAHAAcAAQACAAIAAAAIAPj/AQACAAIAAAAIAPn/AQACAAIAAAAIAPr/AQACAAIAAAAIAPv/AQACAAIAAAAIAPz/AQACAAIAAAAIAP3/AQACAAIAAAAIAP7/AQACAAIAAAAIAP//AQACAAIAAAAIAAAAAQACAAIAAAAIAAEAAQACAAIAAAAIAAIAAQACAAIAAAAIAAMAAQACAAIAAAAIAAQAAQACAAIAAAAIAAUAAQACAAIAAAAIAAYAAQACAAIAAAAIAAcAAQACAAIAAAAJAPj/AQACAAIAAAAJAPn/AQACAAIAAAAJAPr/AQACAAIAAAAJAPv/AQACAAIAAAAJAPz/AQACAAIAAAAJAP3/AQACAAIAAAAJAP7/AQACAAIAAAAJAP//AQACAAIAAAAJAAAAAQACAAIAAAAJAAEAAQACAAIAAAAJAAIAAQACAAIAAAAJAAMAAQACAAIAAAAJAAQAAQACAAIAAAAJAAUAAQACAAIAAAAJAAYAAQACAAIAAAAJAAcAAQACAAIAAAAKAPj/AQACAAIAAAAKAPn/AQACAAIAAAAKAPr/AQACAAIAAAAKAPv/AQACAAIAAAAKAPz/AQACAAIAAAAKAP3/AQACAAIAAAAKAP7/AQACAAIAAAAKAP//AQACAAIAAAAKAAAAAQACAAIAAAAKAAEAAQACAAIAAAAKAAIAAQACAAIAAAAKAAMAAQACAAIAAAAKAAQAAQACAAIAAAAKAAUAAQACAAIAAAAKAAYAAQACAAIAAAAKAAcAAQACAAIAAAALAPj/AQACAAIAAAALAPn/AQACAAIAAAALAPr/AQACAAIAAAALAPv/AQACAAIAAAALAPz/AQACAAIAAAALAP3/AQACAAIAAAALAP7/AQACAAIAAAALAP//AQACAAIAAAALAAAAAQACAAIAAAALAAEAAQACAAIAAAALAAIAAQACAAIAAAALAAMAAQACAAIAAAALAAQAAQACAAIAAAALAAUAAQACAAIAAAALAAYAAQACAAIAAAALAAcAAQACAAIAAAAMAPj/AQACAAIAAAAMAPn/AQACAAIAAAAMAPr/AQACAAIAAAAMAPv/AQACAAIAAAAMAPz/AQACAAIAAAAMAP3/AQACAAIAAAAMAP7/AQACAAIAAAAMAP//AQACAAIAAAAMAAAAAQACAAIAAAAMAAEAAQACAAIAAAAMAAIAAQACAAIAAAAMAAMAAQACAAIAAAAMAAQAAQACAAIAAAAMAAUAAQACAAIAAAAMAAYAAQACAAIAAAAMAAcAAQACAAIAAADy//j/AQACAAIAAADy//n/AQACAAIAAADy//r/AQACAAIAAADy//v/AQACAAIAAADy//z/AQACAAIAAADy//3/AQACAAIAAADy//7/AQACAAIAAADy////AQACAAIAAADy/wAAAQACAAIAAADy/wEAAQACAAIAAADy/wIAAQACAAIAAADy/wMAAQACAAIAAADy/wQAAQACAAIAAADy/wUAAQACAAIAAADy/wYAAQACAAIAAADy/wcAAQACAAIAAAANAAcAAQACAAIAAAANAAYAAQACAAIAAAANAAUAAQACAAIAAAANAAQAAQACAAIAAAANAAMAAQACAAIAAAANAAIAAQACAAIAAAANAAEAAQACAAIAAAANAAAAAQACAAIAAAANAP//AQACAAIAAAANAP7/AQACAAIAAAANAP3/AQACAAIAAAANAPz/AQACAAIAAAANAPv/AQACAAIAAAANAPr/AQACAAIAAAANAPn/AQACAAIAAAANAPj/AQACAAIAAAA=")
tile_set = SubResource("TileSet_rdyop")

[node name="Cursor" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("3_yymqq")
region_enabled = true
region_rect = Rect2(48, 48, 16, 16)
script = ExtResource("4_8wacd")

[node name="UI" parent="." instance=ExtResource("2_3xksr")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="CashLabel" type="Label" parent="."]
offset_left = -590.0
offset_top = 267.0
offset_right = -365.0
offset_bottom = 317.0
theme_override_colors/font_color = Color(0.434969, 0.906956, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_lsft3")
theme_override_font_sizes/font_size = 36
text = "Cash: 0"
vertical_alignment = 1

[node name="CashParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 0.65
texture = ExtResource("5_x7qd2")
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2(10, 5)
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
orbit_velocity_max = 1.0
scale_amount_curve = SubResource("Curve_6yo0j")
color_ramp = SubResource("Gradient_lhfge")

[node name="FishinMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_rnd8x")
autoplay = true
parameters/looping = true

[node name="WinMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_cp6d7")

[node name="ReelSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_kvl0w")

[node name="SplashSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ju2xe")
